--- a/block-BHaacw/assets/spreadsheet/_home.scss
+++ b/block-BHaacw/assets/spreadsheet/_home.scss
@@ -78,8 +78,8 @@ h1{
     margin:  0  auto;
     max-width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(400px,1fr));
-    grid-auto-rows: 210px ;
+    grid-template-columns: repeat(auto-fit,minmax(100px,1900px));
+    // grid-auto-rows: 210px ;
     gap:3rem;
     padding-bottom: 3rem;
     align-items: stretch;
