--- a/block-BHaacw/assets/spreadsheet/style.css
+++ b/block-BHaacw/assets/spreadsheet/style.css
@@ -134,8 +134,7 @@ h1 {
   margin: 0 auto;
   max-width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-  grid-auto-rows: 210px;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1900px));
   gap: 3rem;
   padding-bottom: 3rem;
   align-items: stretch;
