--- a/block-BHaacx/assets/media/spreadsheet/style.css
+++ b/block-BHaacx/assets/media/spreadsheet/style.css
@@ -162,7 +162,7 @@ img {
   margin-bottom: 4rem;
 }
 .hero-text button {
-  width: 10rem;
+  width: 13rem;
   height: 2.5rem;
   border-radius: 9999px;
   background-color: transparent;
@@ -374,11 +374,22 @@ h3 {
 .map {
   grid-column: span 4;
   background-color: rgb(252, 104, 62);
+  padding: 4rem 15rem;
+  text-align: center;
 }
-.map iframe {
-  width: 70%;
-  margin: 0 auto;
-  display: block;
+
+.map-container {
+  height: 0;
+  width: 100%;
+  padding-bottom: 33.25%;
+  position: relative;
+}
+.map-container iframe {
+  position: absolute;
+  height: 100%;
+  left: 0;
+  top: 0;
+  width: 100%;
   box-shadow: 1px 1px 20px 10px rgba(0, 0, 0, 0.438);
 }
 
@@ -417,6 +428,8 @@ footer ul a {
     display: inline-block;
     position: relative;
     z-index: 9999;
+    color: rgb(236, 175, 78);
+    font-size: 2rem;
   }
   nav {
     display: none;
@@ -441,8 +454,16 @@ footer ul a {
     font-size: 2rem;
     color: #fff;
   }
+  #toggle:checked ~ label > .fa-bars {
+    color: #fff;
+    position: fixed;
+    right: 1.6rem;
+    top: 1.1rem;
+  }
   header {
     background-color: #fff;
+    position: relative;
+    padding: 1rem;
   }
   .hero-text,
 .hero-img,
@@ -450,7 +471,27 @@ footer ul a {
 .exp-img,
 .exp,
 .education,
-.form {
+.form,
+.map {
     grid-column: span 1;
+  }
+  .map {
+    padding: 1rem 0rem;
+  }
+  .map-container {
+    padding-bottom: 56.25%;
+  }
+  .map-container iframe {
+    box-shadow: 0 0 0 0;
+  }
+  footer {
+    text-align: center;
+    padding: 4rem;
+  }
+  footer p {
+    margin: 0 0 2rem 0;
+  }
+  footer ul {
+    width: 50%;
   }
 }/*# sourceMappingURL=style.css.map */
